# HK

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
HK/: Algo.h  CMakeLists.txt  Delegate.cpp  Delegate.h  Random.cpp  Random.h
HK/Algo/: Sort.h
HK/Allocators/: Memory.cpp  Memory.h  Pool.h  StaticArena.cpp  StaticArena.h  StringPool.cpp  StringPool.h
HK/Bench/: Bench.cpp  Bench.h
HK/Common/: CompilerMacros.cpp  CompilerMacros.h  Math.cpp  Math.h  Meta.h  Print.cpp  Print.h  StringUtil.cpp  StringUtil.h  Types.cpp  Types.h
HK/Compression/: ArithmeticCoding.h
HK/Containers/: Array.cpp  Array.h  BitArray.cpp  BitArray.h  FixedArray.h  HashMap.h  Set.h
HK/Containers/View/: ArrayView.cpp  ArrayView.h  StringView.cpp  StringView.h
HK/File/: CSV.cpp  CSV.h  File.cpp  File.h  FileLinux.cpp  FilePath.cpp  FilePath.h  FilePathBase.cpp  FilePathBase.h  FilePath_Linux.cpp  FilePath_Windows.cpp  FileWindows.cpp  File_Linux.cpp  File_Windows.cpp
HK/Strings/: String.cpp  String.h
HK/Util/: DualType.cpp  DualType.h  ErrorOr.h  Hasher.cpp  Hasher.h  Out.cpp  Out.h  Platform.h  Platform_Linux.cpp  Platform_Windows.cpp  TaggedUnion.h
Test/: CMakeLists.txt  test.cpp
